# etl

./: .gitignore  .readthedocs.yaml  Manifest.in  README.md  etl.py  makefile  options-scheme.puml  pyproject.toml  requirements.txt  setup.cfg  setup.py  upd.py
docs/source/: conf.py  index.rst
etl/: etl.py
scripts/: upd.sh
test/: local.db  test.sh  update.sh
test/csv/: color-cube-template.csv  color-cube.csv  random-data.csv
test/sql/: age.sql  color-cube-template.sql  color-cube.sql  size-cube.sql
test/xls/: color-cube.xlsx  data.xlsx  size-cube.xlsx
